--- a/src/C#Code/nFizzBuzz/nFizzBuzz/nFizzBuzz.csproj
+++ b/src/C#Code/nFizzBuzz/nFizzBuzz/nFizzBuzz.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CB85FD3A-452C-49DE-A7A3-9C7A48FAF62A}</ProjectGuid>
+    <ProjectGuid>{BC5D7B59-CD92-4F48-9956-1E6EED666FE1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FizzBuzz</RootNamespace>
-    <AssemblyName>FizzBuzz</AssemblyName>
+    <RootNamespace>nFizzBuzz</RootNamespace>
+    <AssemblyName>nFizzBuzz</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
