--- a/src/C#Code/nFizzBuzz/UnitTestProject1/UnitTestProject1.csproj
+++ b/src/C#Code/nFizzBuzz/UnitTestProject1/UnitTestProject1.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4108545B-E377-448E-A824-8821D1B4ED18}</ProjectGuid>
+    <ProjectGuid>{110395C1-B70A-4FC2-AD62-E87C35C78D5C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FizzBuzz.UnitTest</RootNamespace>
-    <AssemblyName>FizzBuzz.UnitTest</AssemblyName>
+    <RootNamespace>UnitTestProject1</RootNamespace>
+    <AssemblyName>UnitTestProject1</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -52,6 +52,12 @@
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\nFizzBuzz\nFizzBuzz.csproj">
+      <Project>{BC5D7B59-CD92-4F48-9956-1E6EED666FE1}</Project>
+      <Name>nFizzBuzz</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
